--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0" id="faq">
+{{!-- <div class="container-fluid p-0" id="faq">
     <img src="/images/Imagem 2.png" class="img-fluid banner" alt="Responsive image">
     <div class="row position-absolute logofaq">
 <!--        <div class="col-12">-->
@@ -11,7 +11,17 @@
     <form>
         <input type="text" placeholder="Type your question..">
     </form>
+</div> --}}
+<div class="container-fluid p-0" id="faq">
+    <img src="/images/Imagem 2.png" class="img-fluid banner" alt="Responsive image">
+    <div class="centered h5 font-weight-bold">
+        <span>{{translation.FAKQ}}</span>
+        <form action="" method="POST">
+            <input type="text" placeholder="Type your question...">
+        </form>
+    </div>
 </div>
+
 
 <section id="categoria"  class="container-fluid">
     <div class="row">
@@ -28,7 +38,7 @@
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold ativo" >{{translation.GENERAL}}</h6></div>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md">
             <div class="row text-center mt-4">
                 <div class="col-12"><img class="" src="./images/Usage.svg"></div>
             </div>
@@ -36,7 +46,7 @@
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >{{translation.USAGE}}</h6></div>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md">
             <div class="row text-center mt-4">
                 <div class="col-12"><img class="" src="./images/Booking%20and%20Payment.svg"></div>
             </div>
@@ -44,7 +54,7 @@
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >{{translation.B_PAYMENT}}</h6></div>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md">
             <div class="row text-center mt-4">
                 <div class="col-12"><img class="" src="./images/Pickup%20or%20shipping.svg"></div>
             </div>
@@ -52,7 +62,7 @@
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">{{translation.P_SHIPPING}}</h6></div>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md">
             <div class="row text-center mt-4">
                 <div class="col-12"><img class="" src="./images/Return.svg"></div>
             </div>
@@ -61,7 +71,7 @@
             </div>
 
         </div>
-        <div class="col-md-3">
+        <div class="col-md">
             <div class="row text-center mt-4">
                 <div class="col-12"><img class="" src="./images/Modification%20and%20Cancellation.svg"></div>
             </div>
