--- a/views/home/planos.handlebars
+++ b/views/home/planos.handlebars
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0" id="plans">
+{{!-- <div class="container-fluid p-0" id="plans">
     <img src="/images/Imagem 2.png" class="img-fluid banner" alt="Responsive image">
     <div class="row position-absolute logo1">
 <!--        <div class="col-12">-->
@@ -7,6 +7,13 @@
 <!--            </div>-->
 <!--        </div>-->
 
+    </div>
+</div> --}}
+
+<div class="container-fluid p-0" id="plans">
+    <img src="/images/Imagem 2.png" class="img-fluid banner" alt="Responsive image">
+    <div class="centered h5 font-weight-bold">
+        <span>{{translation.OWP}}</span>
     </div>
 </div>
 
