--- a/views/home/servicos.handlebars
+++ b/views/home/servicos.handlebars
@@ -1,4 +1,4 @@
-<section class="container-fluid aboutBanner">
+{{!-- <section class="container-fluid aboutBanner">
 
     <div class="row">
         <figure>
@@ -8,7 +8,14 @@
         <h1 class="sobre display-4 font-weight-bold">S<span>ob</span>re <span>Nos</span></h1>
     </div>
 
-</section>
+</section> --}}
+
+<div class="container-fluid p-0" id="SN">
+    <img src="/images/about.png" class="img-fluid banner" alt="Responsive image">
+    <div class="centered h5 font-weight-bold">
+        <span>{{translation.SN}}</span>
+    </div>
+</div>
 
 <!--<section class="container-fluid aboutBanner">-->
 <!--    <div class="row">-->
