add or tradution

--- a/views/partials/_login.handlebars
+++ b/views/partials/_login.handlebars
@@ -20,7 +20,7 @@
                                 <a href="#" class="btn btn-danger"><i class="fab fa-google"></i>  Google</a>
                             </div>
                         </div>
-                        <h2 id="separador"><span>or</span></h2>
+                        <h2 id="separador"><span>{{translation.OR}}</span></h2>
 
                         <div class="container">
                             <label for="uname"><b>E-mail</b></label>
