configurar login facebook

--- a/views/partials/_login.handlebars
+++ b/views/partials/_login.handlebars
@@ -33,7 +33,7 @@
                             <div class="clearfix">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <button type="button" class="signupbtn" id="cansel">Cancel</button>
+                                    <button type="button" class="signupbtn" id="cancel">Cancel</button>
                                 </div>
                                 <div class="col-md-6">
                                     <button type="submit" class="signupbtn">Sign Up</button>
@@ -77,7 +77,7 @@
                             <div class="clearfix">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <button type="button" class=" btn-danger cancel">cansel</button>
+                                        <button type="button" class=" btn-danger cancel">Cancel</button>
                                     </div>
                                     <div class="col-md-6">
                                         <button type="submit" class="signupbtn">Sign Up</button>
