--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -20,9 +20,6 @@
 
             <a class="nav-link"   href="./faq">{{translation.FAQ}}</a>
         </li>
-        <li class="nav-item">
-            <a class="login nav-link"   data-toggle="modal" data-target="#login"><i class="far fa-user"></i> {{translation.ENTRAR}}</a>
-        </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle"  href="/?clang=es" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="flag-icon flag-icon-gb-eng"></span> {{translation.ENG}}
@@ -33,6 +30,21 @@
         </div>
       </li>
 
+        {{#if User.email}}
+          <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle"  href="/?clang=es" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="far fa-user"></i> {{User.firstName}} {{User.lastName}}
+                </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item"  href="/users"> Perfil</a>
+                  <a class="dropdown-item"  href="/auth/logout"> Logout</a>
+            </div>
+          </li>
+        {{else}}
+          <li class="nav-item">
+              <a class="login nav-link"   data-toggle="modal" data-target="#login"><i class="far fa-user"></i> {{translation.ENTRAR}}</a>
+          </li>
+        {{/if}}
     </ul>
     <form class="form-inline my-2 my-lg-0">
             <a href="./booking" class="btn btn-info my-2 my-sm-0" >{{translation.ONLINE_BOOKING}}</a>
