--- a/views/user/dash.handlebars
+++ b/views/user/dash.handlebars
@@ -1,1 +1,9 @@
-User dashboard
+<section class="container-fluid mt-5 p-5">
+    <div class="row p-5 mt-5">
+        <div class="col-md-12">
+            <p  style="background-color: blue;">Nome: {{User.firstName}}</p>
+            <p  style="background-color: blue;">Apelido: {{User.lastName}}</p>
+            <p  style="background-color: blue;">Email: {{User.email}}</p>
+        </div>
+    </div>
+</section>
