inicio dash-user

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -374,3 +374,7 @@ span.psw {
     font-size: 20em;
 
 }
+/*************************************perfil do user***************************************/
+#dashboard{
+    background-color: #cccccc;
+}
