--- a/views/user/dash.handlebars
+++ b/views/user/dash.handlebars
@@ -1,1 +1,18 @@
-User dashboard
+<!--User dashboard-->
+
+<section id="dashboard">
+    <div class="row">
+        <div class="col-4">
+
+        </div>
+
+        <div class="card col-8" id="minhainfo">
+
+        </div>
+
+
+
+
+
+    </div>
+</section>
