add google email to db

--- a/views/user/dash.handlebars
+++ b/views/user/dash.handlebars
@@ -1,8 +1,8 @@
 <section class="container-fluid mt-5 p-5">
     <div class="row p-5 mt-5">
         <div class="col-md-12">
-            <p  style="background-color: blue;">Nome: {{User.username }}</p>
-            <p  style="background-color: blue;">Apelido: {{User.googleId}}</p>
+            <p  style="background-color: blue;">Nome: {{User.firstName }}</p>
+            <p  style="background-color: blue;">Apelido: {{User.lastName}}</p>
             <p  style="background-color: blue;">Email: {{User.email}}</p>
         </div>
     </div>
