fix lingua changer

--- a/views/partials/_login.handlebars
+++ b/views/partials/_login.handlebars
@@ -18,12 +18,12 @@
                                 </div>
                             <div class="col-6">
                                 <a href="/auth/google" class="btn btn-danger"><i class="fab fa-google"></i>  Google</a>
-                            </div>
+                            </div> 
                         </div>
                         <h2 id="separador"><span>{{translation.OR}}</span></h2>
 
                         <div class="container">
-                            <form method="POST" action="/auth/login"></form>
+                            <form method="POST" action="/teste"></form>
                                 <label for="uname"><b>E-mail</b></label>
                                 <input type="text" placeholder="Enter your Email" name="username" required>
 
