--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -21,12 +21,34 @@
             <a class="nav-link"   href="./faq">{{translation.FAQ}}</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle"  href="/?clang=es" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="flag-icon flag-icon-gb-eng"></span> {{translation.ENG}}
-            </a>
+          {{#if_equal translation lang 'en'}}
+                <a class="nav-link dropdown-toggle"  href="/?clang=es" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="flag-icon flag-icon-gb-eng"></span> {{translation.en}}
+                </a>
+          {{/if_equal}}
+          {{#if_equal translation lang 'pt'}}
+                <a class="nav-link dropdown-toggle"  href="/?clang=pt" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="flag-icon flag-icon-pt"></span> {{translation.pt}}
+                </a>
+          {{/if_equal}}
+          {{#if_equal translation lang 'fr'}}
+                <a class="nav-link dropdown-toggle"  href="/?clang=fr" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="flag-icon flag-icon-fr"></span> {{translation.fr}}
+                </a>
+          {{/if_equal}}
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item"  href="/?clang=pt"><span class="flag-icon flag-icon-pt"></span> {{translation.POR}}</a>
-              <a class="dropdown-item"  href="/?clang=fr"><span class="flag-icon flag-icon-fr"></span> {{translation.FRA}}</a>
+          {{#if_equal translation lang 'pt'}}
+            <a class="dropdown-item"  href="/?clang=en"><span class="flag-icon flag-icon-gb-eng"></span> {{translation.en}}</a>
+            <a class="dropdown-item"  href="/?clang=fr"><span class="flag-icon flag-icon-fr"></span> {{translation.fr}}</a>
+          {{/if_equal}}
+          {{#if_equal translation lang 'en'}}
+            <a class="dropdown-item"  href="/?clang=pt"><span class="flag-icon flag-icon-pt"></span> {{translation.pt}}</a>
+            <a class="dropdown-item"  href="/?clang=fr"><span class="flag-icon flag-icon-fr"></span> {{translation.fr}}</a>
+          {{/if_equal}}
+          {{#if_equal translation lang 'fr'}}
+            <a class="dropdown-item"  href="/?clang=pt"><span class="flag-icon flag-icon-pt"></span> {{translation.pt}}</a>
+            <a class="dropdown-item"  href="/?clang=en"><span class="flag-icon flag-icon flag-icon-gb-eng"></span> {{translation.en}}</a>
+          {{/if_equal}}
         </div>
       </li>
 
@@ -36,8 +58,8 @@
                     <i class="far fa-user"></i> {{User.firstName}} {{User.lastName}}
                 </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item"  href="/users"> Perfil</a>
-                  <a class="dropdown-item"  href="/auth/logout"> Logout</a>
+                  <a class="dropdown-item"  href="/users"><i class="fas fa-user-tag"></i> {{translation.PERFIL}}</a>
+                  <a class="dropdown-item"  href="/auth/logout"><i class="fas fa-sign-out-alt"></i> {{translation.SAIR}}</a>
             </div>
           </li>
         {{else}}
