--- a/views/partials/_login.handlebars
+++ b/views/partials/_login.handlebars
@@ -13,48 +13,40 @@
                 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                     
                         <div class="row text-center" id="redesocial">
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <a href="/auth/facebook" class="btn btn-primary"><i class="fab fa-facebook-square"></i>  Facebook</a>
                                 </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <a href="/auth/google" class="btn btn-danger"><i class="fab fa-google"></i>  Google</a>
                             </div> 
                         </div>
                         <h2 id="separador"><span>{{translation.OR}}</span></h2>
 
                         <div class="container">
-                            <form method="POST" action="/teste"></form>
+                            <form method="POST" action="/auth/login">
                                 <label for="uname"><b>E-mail</b></label>
-                                <input type="text" placeholder="Enter your Email" name="username" required>
-
+                                <input type="text" name="username" placeholder="Enter your Email" name="username" required>
                                 <label for="psw"><b>Password</b></label>
-                                <input type="password" placeholder="Enter Password" name="password" required>
-
-                                {{!-- <button type="submit">Login</button> --}}
-                                <div class="clearfix">
-                                    <div class="row">
-                                        <div class="col-md-6">
-
-                                            <button type="button" class="signupbtn" id="cancel">Cancel</button>
-
-                                        </div>
-                                        <div class="col-md-6">
-                                            <button type="submit" class="signupbtn">Entrar</button>
-                                        </div>
+                                <input type="password" name="password" placeholder="Enter Password" name="password" required>
+                                <div class="mb-3">
+                                    <label>
+                                    <input type="checkbox" checked="checked" name="remember"> Remember me
+                                    </label>
+                                    <label id="forgot">
+                                        <a href="/resetSenha">Esqueceu a senha?</a>
+                                    </label>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="col-md-6">
+                                      <input  class="btn btn-outline-warning terras" type="reset" value="canselar">  
+                                    </div>
+                                    <div class="col-md-6">
+                                      <input class="btn btn-success terra" type="submit" value="{{translation.ENTRAR}}">  
                                     </div>
                                 </div>
-                                <label>
-                                    <input type="checkbox" checked="checked" name="remember"> Remember me
-                                </label>
-                                <label id="forgot">
-                                    <a href="/resetSenha">Esqueceu a senha?</a>
-                                </label>
+                                
                             </form>
                         </div>
-
-
-                        
-                    
                 </div>
                 <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                     <form method="POST" action="/auth/registro">
@@ -66,11 +58,11 @@
                             <div class="form-row">
                                 <div class="col">
                                     <label for="firstName"><b>Nome</b></label>
-                                    <input type="text" class="form-control" placeholder="First name" name="firstName">
+                                    <input type="text" class="form-control agua" placeholder="First name" name="firstName">
                                 </div>
                                 <div class="col">
                                     <label for="lastName"><b>Apelido</b></label>
-                                    <input type="text" class="form-control" placeholder="Last name" name="lastName">
+                                    <input type="text" class="form-control agua" placeholder="Last name" name="lastName">
                                 </div>
                             </div>
 
@@ -87,15 +79,17 @@
                                 <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
                             </label> --}}
 
-                            <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+                            <p>By creating an account you agree to our <a href="#" style="color:dodgerblue; text-decoration:underline;">Terms & Privacy</a>.</p>
 
-                            <div class="clearfix">
+                            <div class="clearfix mb-3">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <button type="button" class=" btn-danger cancel">Cancel</button>
+                                        {{!-- <button type="button" class=" btn-danger cancel">Cancel</button> --}}
+                                        <input class="terras btn btn-outline-warning" type="reset" value="canselar">
                                     </div>
                                     <div class="col-md-6">
-                                        <button type="submit" class="signupbtn">Sign Up</button>
+                                        {{!-- <button type="submit" class="signupbtn">Sign Up</button> --}}
+                                        <input type="submit" class="btn btn-success terra" value="Registrar">
                                     </div>
                                 </div>
                             </div>
